docs/CURSO_SIU_ARIU/CLASE_3/archivos_de_trabajo/clase3-recursosBasicos/02-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: prueba
  labels: 
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.25-alpine
    ports:
    - containerPort: 80
      protocol: TCP
      name: http
    # resources:
    #   requests:
    #     cpu: 50m
    #     memory: 64Mi
    #   limits:
    #     cpu: 100m
    #     memory: 128Mi
    # livenessProbe:
    #   httpGet:
    #     path: /
    #     port: 80
    #   initialDelaySeconds: 30
    #   periodSeconds: 10
    # readinessProbe:
    #   httpGet:
    #     path: /
    #     port: 80
    #   initialDelaySeconds: 5
    #   periodSeconds: 5
